<?xml version="1.0"?>
<package format="2">
    <name>polly_speech</name>
    <version>1.0.0</version>
    <description>The polly_speech package</description>
    <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
    <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
    <license>BSD</license>

    <url type="repository">https://github.com/byeongkyu/polly_speech</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>actionlib</depend>
    <depend>rospy</depend>
    <depend>message_generation</depend>
    <depend>python-pyaudio</depend>
    <depend>python-yaml</depend>
    <depend>libasound2-dev</depend>

    <export>
    </export>
</package>
